# zj-cal

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
scripts/: gen-test-ics.sh
scripts/lib/: colors.sh
src/: calendar.rs  config.rs  ctx.rs  macros.rs  main.rs
