[package]
name = "zj-cal"
version = "0.1.0"
edition = "2021"

[dependencies]
zellij-tile = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
owo-colors = "4.2.3"
icalendar = "0.17.6"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dev-dependencies]
indoc = "2.0.7"
